# labML

./: .gitignore  AGENTS.md  LICENSE  README.md  labML.py  lablML.py  main.py  make_splits.py  prepare_data.py  pyproject.toml  regression.py  setup.py
.github/workflows/: black.yml  ruff.yml
commands/: prepare_data.py  regression.py
commands/util/: common.py
docs/: configuration.md
examples/: benchmark_classification.toml  benchmark_regression.toml  demo_benchmark_regression.toml  demo_benchmark_regression_parallel.toml  demo_data.csv  demo_data_classification.csv  demo_prepare.toml  prepare.toml  user_preprocess.py
labml/: labML.py
labml/commands/: get_results_partition.py  prepare_data.py  regression.py
labml/commands/util/: cli_report.py  common.py
labml/core/: __init__.py  benchmark.py  benchmark_context.py  benchmark_engine.py  benchmark_models.py  benchmark_plan.py  benchmark_progress.py  benchmark_results.py  common_config.py  config.py  errors.py  io.py  output_handlers.py  partitioning.py  prepare.py  ranges.py  registry.py
scripts/demo/: build_gifs.py  build_gifs.sh
tests/helpers/: __init__.py  testing_helpers.py
tests/integration/: test_benchmark_invalid_config.py  test_classification_benchmark.py  test_inspect_config.py  test_output_handler_injection.py  test_prepare_and_benchmark.py  test_prepare_invalid_config.py
tests/unit/: test_benchmark_context.py  test_benchmark_execution_engine.py  test_benchmark_options.py  test_benchmark_results.py  test_config_and_common_config.py  test_errors.py  test_io.py  test_output_handlers.py  test_partitioning.py  test_ranges.py  test_recent_results_fifo.py
util/: cli_report.py
