[tool.poetry]
name = "labML"
version = "0.1.0"
description = "An simple commandline tool to execute some machine learning approaches in a water quality problem"
authors = ["Enrique Fernandez-Blanco <enrique.fernandez@udc.es>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.1"
pandas = "^1.4.4"
typer = "^0.6.1"
scikit-learn = "^1.1.2"
rich = "^12.5.1"
setuptools = "^65.3.0"
pathlib2 = "^2.3.7.post1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
