[project]
name = "labML"
version = "0.1.0"
description = "An simple commandline tool to execute some machine learning approaches in regression problems"
readme = "README.md"
requires-python = ">=3.11"

license = { text = "MIT" }

authors = [
  { name = "Enrique Fernandez-Blanco", email = "enrique.fernandez@udc.es" }
]

dependencies = [
  "numpy>=1.23.2,<2.0.0",
  "scipy>=1.9.1,<2.0.0",
  "pandas>=1.4.4,<2.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "typer>=0.6.1,<0.7.0",
  "scikit-learn>=1.1.2,<2.0.0",
  "rich>=12.5.1,<13.0.0",
  "openpyxl>=3.0.10,<4.0.0",
  "pyarrow>=14.0.0,<20.0.0",
]

[project.scripts]
labml = "labml.cli:app"

[project.optional-dependencies]
dev = [
  "ruff>=0.6.8,<0.7.0",
  "pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["labml*"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:np.find_common_type is deprecated.*:DeprecationWarning",
]
